setup Build.PL to refresh models pod doc

--- a/dist.ini
+++ b/dist.ini
@@ -13,12 +13,11 @@ repository.url    = git://github.com/dod38fr/config-model-approx.git
 repository.web    = https://github.com/dod38fr/config-model-approx
 repository.type   = git
 
-; put that back when pod generation is done by Build.PL
-; [Prereqs / ConfigureRequires]
-; Config::Model    = 2.026
-; Log::Log4perl    = 1.11 
-; Any::Moose       = 0
-; File::Slurp = 0 
+[Prereqs / ConfigureRequires]
+Config::Model    = 2.026
+Log::Log4perl    = 1.11 
+Any::Moose       = 0
+File::Slurp = 0 
 
 [Prereqs / RuntimeRequires]
 Config::Model    = 2.017
