dzil: version isnow handled with git plugins

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,4 @@
 name    = Config-Model-Approx
-version = 1.006
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
@@ -10,8 +9,20 @@ homepage          = https://github.com/dod38fr/config-model/wiki
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Config-Model-Approx
 bugtracker.mailto = bug-project@rt.cpan.org
 repository.url    = git://github.com/dod38fr/config-model-approx.git
-repository.web    = https://github.com/dod38fr/config-model-approx
+repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
+
+[Git::Check]
+allow_dirty = dist.ini
+changelog = ChangeLog
+
+[Git::Tag]
+
+; use 'V=2.234 dzil release' to override version number
+[Git::NextVersion]
+[Git::Push]
+
+[MetaJSON]
 
 [Prereqs / ConfigureRequires]
 Config::Model    = 2.026
