depends directly on Mouse instead of Any::Moose

--- a/dist.ini
+++ b/dist.ini
@@ -27,7 +27,7 @@ changelog = ChangeLog
 [Prereqs / ConfigureRequires]
 Config::Model    = 2.026
 Log::Log4perl    = 1.11 
-Any::Moose       = 0
+Mouse            = 0
 File::Slurp = 0 
 
 [Prereqs / RuntimeRequires]
