added more automation to dzil

--- a/dist.ini
+++ b/dist.ini
@@ -12,14 +12,22 @@ repository.url    = git://github.com/dod38fr/config-model-approx.git
 repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
 
-[Git::Check]
-allow_dirty = dist.ini
-changelog = ChangeLog
-
-[Git::Tag]
+[NextRelease]
+filename = ChangeLog
+format = %{yyyy-MM-dd}d - %v%T
 
 ; use 'V=2.234 dzil release' to override version number
 [Git::NextVersion]
+
+[Git::Check]
+allow_dirty = dist.ini
+allow_dirty = ChangeLog
+
+
+[Git::Commit]
+changelog = ChangeLog
+
+[Git::Tag]
 [Git::Push]
 
 [MetaJSON]
@@ -59,6 +67,7 @@ remove = PodVersion
 remove = Readme
 
 [ModuleBuild::Custom]
+mb_version = 0.34  
 
 [Prepender]
 copyright=1
