--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
 
 [NextRelease]
-filename = ChangeLog
+filename = Changes
 format = %{yyyy-MM-dd}d - %v%T
 
 ; use 'V=2.234 dzil release' to override version number
@@ -21,11 +21,11 @@ format = %{yyyy-MM-dd}d - %v%T
 
 [Git::Check]
 allow_dirty = dist.ini
-allow_dirty = ChangeLog
+allow_dirty = Changes
 
 
 [Git::Commit]
-changelog = ChangeLog
+changelog = Changes
 
 [Git::Tag]
 [Git::Push]
