dist.ini: explicitly depends on perl 5.10

--- a/dist.ini
+++ b/dist.ini
@@ -32,6 +32,9 @@ changelog = Changes
 
 [MetaJSON]
 
+[Prereqs]
+perl              = 5.10.1
+
 [Prereqs / ConfigureRequires]
 Config::Model    = 2.026
 Log::Log4perl    = 1.11 
