dist.ini: updated dependencies for C::M::Tester

--- a/dist.ini
+++ b/dist.ini
@@ -36,12 +36,12 @@ changelog = Changes
 perl              = 5.10.1
 
 [Prereqs / ConfigureRequires]
-Config::Model    = 2.026
+Config::Model    = 2.041
 Log::Log4perl    = 1.11 
 Mouse            = 0
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 2.026
+Config::Model    = 2.041
 Log::Log4perl    = 1.11 
 
 [Prereqs / RuntimeRecommends]
@@ -52,13 +52,8 @@ Config::Model::TkUI    = 0 ; graphical interface
 [Prereqs / BuildRequires]
 Test::More        = 0
 
-; required to run tests with Config::Model::Tester
-Test::Warn        = 0
-Test::Exception   = 0
-Test::Differences = 0
-Test::File::Contents = 0
-Test::Memory::Cycle = 0
-File::Copy::Recursive = 0 
+; for all the tests in t/model_tests.d
+Config::Model::Tester = 2.042
 
 [@Filter]
 bundle = @Classic
