--- a/dist.ini
+++ b/dist.ini
@@ -2,12 +2,12 @@ name    = Config-Model-Approx
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
-copyright_year = 2013
+copyright_year = 2009-2013
 
 [MetaResources]
 homepage          = https://github.com/dod38fr/config-model/wiki
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Config-Model-Approx
-bugtracker.mailto = bug-project@rt.cpan.org
+bugtracker.web    =  use github
+bugtracker.mailto =  use github
 repository.url    = git://github.com/dod38fr/config-model-approx.git
 repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
