dist.ini: switch bug tracker to github

--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,8 @@ copyright_year = 2009-2013
 
 [MetaResources]
 homepage          = https://github.com/dod38fr/config-model/wiki
-bugtracker.web    =  use github
-bugtracker.mailto =  use github
+bugtracker.web    = http://github.com/dod38fr/config-model-approx/issues
+bugtracker.mailto = ddumont at cpan.org
 repository.url    = git://github.com/dod38fr/config-model-approx.git
 repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
