--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Config-Model-Approx
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
-copyright_year = 2009-2017
+copyright_year = 2015-2018
 
 [MetaResources]
 homepage          = https://github.com/dod38fr/config-model/wiki
@@ -11,6 +11,9 @@ bugtracker.mailto = ddumont at cpan.org
 repository.url    = git://github.com/dod38fr/config-model-approx.git
 repository.web    = http://github.com/dod38fr/config-model-approx
 repository.type   = git
+
+[Prereqs]
+perl = 5.010
 
 [NextRelease]
 filename = Changes
@@ -23,52 +26,65 @@ format = %{yyyy-MM-dd}d - %v%T
 allow_dirty = dist.ini
 allow_dirty = Changes
 
-
 [Git::Commit]
-changelog = Changes
 
 [Git::Tag]
 [Git::Push]
 
 [MetaJSON]
 
-[Prereqs]
-perl              = 5.10.1
-
-[Prereqs / ConfigureRequires]
-Config::Model    = 2.041
-Log::Log4perl    = 1.11 
-Mouse            = 0
+[AutoPrereqs]
+skip = ^[a-z\d]+$
+skip = ExtUtils::testlib
+skip = Exporter
 
 [Prereqs / RuntimeRequires]
-Config::Model    = 2.041
-Log::Log4perl    = 1.11 
-
 [Prereqs / RuntimeRecommends]
-Config::Model::CursesUI = 0 ; Curses interface
-Config::Model::TkUI    = 0 ; graphical interface
-
+App::Cme = 0 
+Config::Model::TkUI = 0 
 
 [Prereqs / BuildRequires]
-Test::More        = 0
-
-; for all the tests in t/model_tests.d
-Config::Model::Tester = 2.042
 
 [@Filter]
-bundle = @Classic
-remove = MakeMaker
-remove = PodCoverageTests
-remove = PodVersion
-remove = Readme
+-bundle = @Basic
+-remove = Readme
+-remove = MakeMaker
 
 [ModuleBuild::Custom]
 mb_version = 0.34  
+
+; avoid messing with generated pod files. Otherwise pod re-generated
+; at packaging time (Debian) are different (because Dist::Zilla is not
+; used at that time) See
+; http://blogs.perl.org/users/polettix/2011/11/distzilla-podweaver-and-bin.html
+; for details on this configuration magic
+[FileFinder::ByName / OnlyPmFiles]
+dir = lib
+match = \.pm$
+
+[FileFinder::ByName / ScriptFile]
+dir = script
+match = \.pl$
+
+[FileFinder::ByName / noModelFiles]
+dir = lib
+skip = /models/
+match = \.p(m|od)$
+
+[PkgVersion]
+finder = OnlyPmFiles
+
+[PodWeaver]
+finder = :ExecFiles
+finder = noModelFiles
 
 [Prepender]
 copyright=1
 
 [Run::BeforeBuild]
-;-- Generate pod doc from model, requires Config::Model 2.026
+;-- Generate pod doc from model
+run = cme gen-class-pod
+
+[Run::BeforeRelease]
 run = cme gen-class-pod
 
