--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,7 @@ repository.type   = git
 perl = 5.010
 
 [NextRelease]
-filename = Changes
-format = %{yyyy-MM-dd}d - %v%T
+format = %v%T %{yyyy-MM-dd}d
 
 ; use 'V=2.234 dzil release' to override version number
 [Git::NextVersion]
